--- a/Assignment_1.ipynb
+++ b/Assignment_1.ipynb
@@ -41,29 +41,33 @@
       "metadata": {
         "id": "s07c7JK7Oqt-"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "print(s.split())"
+        "s = \"Hi there Sam!\"\n",
+        "s.split()"
       ],
       "metadata": {
-        "id": "6mGVa3SQYLkb",
-        "outputId": "3e3e302d-2c05-4f35-d648-8d3657f82882",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "sdTp2ajQX5wj",
+        "outputId": "2e2d36ef-b466-41ff-cf8e-5fe534a96d08"
       },
-      "execution_count": 2,
+      "execution_count": 36,
       "outputs": [
         {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "['Hi', 'there', 'Sam!']\n"
-          ]
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['Hi', 'there', 'Sam!']"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 36
         }
       ]
     },
@@ -87,32 +91,8 @@
       "metadata": {
         "id": "_ZHoml3kPqic"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "print(\"The diameter of {} is {} kilometers.\".format(planet,diameter))\n",
-        "\n"
-      ],
-      "metadata": {
-        "id": "HyRyJv6CYPb4",
-        "outputId": "e8a937d7-a6ae-4188-95bc-0b9f8ff15204",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "execution_count": 4,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "The diameter of Earth is 12742 kilometers.\n"
-          ]
-        }
-      ]
     },
     {
       "cell_type": "markdown",
@@ -131,23 +111,24 @@
       "metadata": {
         "id": "fcVwbCc1QrQI"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
+        "d = {'k1':[1,2,3,{'tricky':['oh','man','inception',{'target':[1,2,3,'hello']}]}]}\n",
         "d['k1'][3]['tricky'][3]['target'][3]"
       ],
       "metadata": {
         "id": "MvbkMZpXYRaw",
-        "outputId": "282cb378-0e02-4520-9077-379a4bff1747",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
-        }
+        },
+        "outputId": "5d826485-62c6-49c0-9c55-edbd8949a3e5"
       },
-      "execution_count": 6,
+      "execution_count": 39,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -160,7 +141,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 6
+          "execution_count": 39
         }
       ]
     },
@@ -176,12 +157,42 @@
     {
       "cell_type": "code",
       "source": [
+        "\"The diameter of {planet} is {diameter} kilometers\".format(planet = \"Earth\", diameter = 12742)"
+      ],
+      "metadata": {
+        "id": "HyRyJv6CYPb4",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "d5e058ae-dd49-46c3-9420-12f5f66db791"
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'The diameter of Earth is 12742 kilometers'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 4
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "import numpy as np"
       ],
       "metadata": {
         "id": "LLiE_TYrhA1O"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -197,59 +208,29 @@
     {
       "cell_type": "code",
       "source": [
-        "arr=np.zeros(10)\n",
-        "print(arr)"
+        "import numpy as np\n",
+        "np.zeros(10)"
       ],
       "metadata": {
         "id": "NHrirmgCYXvU",
-        "outputId": "371a6035-ea9d-4edf-aeb2-d8d43762d046",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "7724784f-7cf8-4b99-af38-cfb1b6081c59"
       },
-      "execution_count": 8,
+      "execution_count": 6,
       "outputs": [
         {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "[0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]\n"
-          ]
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([0., 0., 0., 0., 0., 0., 0., 0., 0., 0.])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 6
         }
       ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "arr=np.ones(10)*5\n",
-        "print(arr)"
-      ],
-      "metadata": {
-        "id": "e4005lsTYXxx",
-        "outputId": "17c0862d-70a5-4bfa-a77b-f2c98d61790e",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "execution_count": 9,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "[5. 5. 5. 5. 5. 5. 5. 5. 5. 5.]\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "GAQ97KbQvrk5"
-      },
-      "execution_count": null,
-      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -263,24 +244,54 @@
     {
       "cell_type": "code",
       "source": [
-        "arr=np.arange(20,35,2)\n",
-        "print(arr)"
+        "import numpy as np\n",
+        "np.ones(10)*5"
+      ],
+      "metadata": {
+        "id": "e4005lsTYXxx",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "b78bb453-9e62-4b5f-9246-924257f8b78d"
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([5., 5., 5., 5., 5., 5., 5., 5., 5., 5.])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 7
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import numpy as np\n",
+        "np.arange(20,36,2)"
       ],
       "metadata": {
         "id": "oAI2tbU2Yag-",
-        "outputId": "8694b06f-9ce1-4b84-814c-723727400331",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "c3270722-bb76-45f4-baab-9530cde73cc5"
       },
-      "execution_count": 12,
+      "execution_count": 8,
       "outputs": [
         {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "[20 22 24 26 28 30 32 34]\n"
-          ]
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([20, 22, 24, 26, 28, 30, 32, 34])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 8
         }
       ]
     },
@@ -296,17 +307,18 @@
     {
       "cell_type": "code",
       "source": [
-        "arr=np.arange(0,9).reshape(3,3)\n",
-        "print(arr)"
+        "import numpy as np\n",
+        "x =  np.arange(0,9).reshape(3,3)\n",
+        "print(x)"
       ],
       "metadata": {
         "id": "tOlEVH7BYceE",
-        "outputId": "a9a36741-26d6-44f8-bc40-20324758ba7a",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "09e7d7bf-2611-46c8-abd4-82a919ee4911"
       },
-      "execution_count": 16,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
@@ -332,19 +344,20 @@
     {
       "cell_type": "code",
       "source": [
-        "a=np.array([1, 2, 3])\n",
-        "b=np.array([4, 5, 6])\n",
-        "arr=np.concatenate((a,b))\n",
-        "print(arr)"
+        "import numpy as np\n",
+        "from numpy.matrixlib.defmatrix import concatenate\n",
+        "a=np.array([1,2,3])\n",
+        "b=np.array([4,5,6])\n",
+        "print(np.concatenate((a,b),axis=0))"
       ],
       "metadata": {
         "id": "rAPSw97aYfE0",
-        "outputId": "955e32b5-0d5d-4ca6-aa1d-88b07d18db26",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "fcd8dc47-a68f-45e0-da11-ecf84379b55e"
       },
-      "execution_count": 17,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
@@ -381,13 +394,13 @@
       "metadata": {
         "id": "T5OxJRZ8uvR7"
       },
-      "execution_count": 18,
+      "execution_count": 22,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "df=pd.DataFrame([['A',50],['B',70],['C',40]])\n",
+        "df=pd.DataFrame([[\"Ravi\",24],[\"Raju\",25],[\"Rahul\",23]])\n",
         "df"
       ],
       "metadata": {
@@ -396,22 +409,22 @@
           "base_uri": "https://localhost:8080/",
           "height": 143
         },
-        "outputId": "2f084293-4a7b-4079-c197-0d044b0cb13a"
+        "outputId": "f78e9bdd-d019-43a5-e57b-02120fe938b3"
       },
-      "execution_count": 21,
+      "execution_count": 23,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "   0   1\n",
-              "0  A  50\n",
-              "1  B  70\n",
-              "2  C  40"
+              "       0   1\n",
+              "0   Ravi  24\n",
+              "1   Raju  25\n",
+              "2  Rahul  23"
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-0a7c5d38-97bd-44cf-8662-8e670480b38f\">\n",
+              "  <div id=\"df-0473ccdd-1f54-4f32-b276-a8a1fdc09075\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -438,23 +451,23 @@
               "  <tbody>\n",
               "    <tr>\n",
               "      <th>0</th>\n",
-              "      <td>A</td>\n",
-              "      <td>50</td>\n",
+              "      <td>Ravi</td>\n",
+              "      <td>24</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>1</th>\n",
-              "      <td>B</td>\n",
-              "      <td>70</td>\n",
+              "      <td>Raju</td>\n",
+              "      <td>25</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>2</th>\n",
-              "      <td>C</td>\n",
-              "      <td>40</td>\n",
+              "      <td>Rahul</td>\n",
+              "      <td>23</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-0a7c5d38-97bd-44cf-8662-8e670480b38f')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-0473ccdd-1f54-4f32-b276-a8a1fdc09075')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -505,12 +518,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-0a7c5d38-97bd-44cf-8662-8e670480b38f button.colab-df-convert');\n",
+              "          document.querySelector('#df-0473ccdd-1f54-4f32-b276-a8a1fdc09075 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-0a7c5d38-97bd-44cf-8662-8e670480b38f');\n",
+              "          const element = document.querySelector('#df-0473ccdd-1f54-4f32-b276-a8a1fdc09075');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -533,7 +546,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 21
+          "execution_count": 23
         }
       ]
     },
@@ -549,14 +562,15 @@
     {
       "cell_type": "code",
       "source": [
-        "d=pd.date_range(start='01-01-2023',end='10-02-2023')\n",
-        "for i in d:\n",
-        "  print(i)"
+        "import pandas as pd \n",
+        "date = pd.date_range(start ='1-1-2023', end ='10-02-2018', freq ='24H')\n",
+        "for i in date:\n",
+        "    print(i)"
       ],
       "metadata": {
         "id": "dgyC0JhVYl4F"
       },
-      "execution_count": null,
+      "execution_count": 26,
       "outputs": []
     },
     {
@@ -580,23 +594,25 @@
       "metadata": {
         "id": "_XMC8aEt0llB"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
+        "import pandas as pd\n",
+        "lists = [[1, 'aaa', 22], [2, 'bbb', 25], [3, 'ccc', 24]]\n",
         "pd.DataFrame(lists)"
       ],
       "metadata": {
         "id": "knH76sDKYsVX",
-        "outputId": "a3d0ee3b-977f-43b7-9dd8-70ea3e2ed176",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 143
-        }
+        },
+        "outputId": "0f27c32c-6aaf-4514-a270-27fce062823a"
       },
-      "execution_count": 24,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -609,7 +625,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-97d7c9c5-b02b-4b3c-b015-9449934131c1\">\n",
+              "  <div id=\"df-8749cd19-7dcc-40c5-833a-c66e0d989d43\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -656,7 +672,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-97d7c9c5-b02b-4b3c-b015-9449934131c1')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-8749cd19-7dcc-40c5-833a-c66e0d989d43')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -707,12 +723,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-97d7c9c5-b02b-4b3c-b015-9449934131c1 button.colab-df-convert');\n",
+              "          document.querySelector('#df-8749cd19-7dcc-40c5-833a-c66e0d989d43 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-97d7c9c5-b02b-4b3c-b015-9449934131c1');\n",
+              "          const element = document.querySelector('#df-8749cd19-7dcc-40c5-833a-c66e0d989d43');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -735,7 +751,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 24
+          "execution_count": 16
         }
       ]
     }
