--- a/Assignment_1.ipynb
+++ b/Assignment_1.ipynb
@@ -41,33 +41,29 @@
       "metadata": {
         "id": "s07c7JK7Oqt-"
       },
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "s = \"Hi there Sam!\"\n",
-        "s.split()"
+        "print(s.split())"
       ],
       "metadata": {
+        "id": "6mGVa3SQYLkb",
+        "outputId": "3e3e302d-2c05-4f35-d648-8d3657f82882",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        },
-        "id": "sdTp2ajQX5wj",
-        "outputId": "2e2d36ef-b466-41ff-cf8e-5fe534a96d08"
+        }
       },
-      "execution_count": 36,
+      "execution_count": 2,
       "outputs": [
         {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "['Hi', 'there', 'Sam!']"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 36
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "['Hi', 'there', 'Sam!']\n"
+          ]
         }
       ]
     },
@@ -91,8 +87,32 @@
       "metadata": {
         "id": "_ZHoml3kPqic"
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(\"The diameter of {} is {} kilometers.\".format(planet,diameter))\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "HyRyJv6CYPb4",
+        "outputId": "e8a937d7-a6ae-4188-95bc-0b9f8ff15204",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "The diameter of Earth is 12742 kilometers.\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -111,24 +131,23 @@
       "metadata": {
         "id": "fcVwbCc1QrQI"
       },
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "d = {'k1':[1,2,3,{'tricky':['oh','man','inception',{'target':[1,2,3,'hello']}]}]}\n",
         "d['k1'][3]['tricky'][3]['target'][3]"
       ],
       "metadata": {
         "id": "MvbkMZpXYRaw",
+        "outputId": "282cb378-0e02-4520-9077-379a4bff1747",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
-        },
-        "outputId": "5d826485-62c6-49c0-9c55-edbd8949a3e5"
+        }
       },
-      "execution_count": 39,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -141,7 +160,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 39
+          "execution_count": 6
         }
       ]
     },
@@ -157,42 +176,12 @@
     {
       "cell_type": "code",
       "source": [
-        "\"The diameter of {planet} is {diameter} kilometers\".format(planet = \"Earth\", diameter = 12742)"
-      ],
-      "metadata": {
-        "id": "HyRyJv6CYPb4",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 35
-        },
-        "outputId": "d5e058ae-dd49-46c3-9420-12f5f66db791"
-      },
-      "execution_count": 4,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "'The diameter of Earth is 12742 kilometers'"
-            ],
-            "application/vnd.google.colaboratory.intrinsic+json": {
-              "type": "string"
-            }
-          },
-          "metadata": {},
-          "execution_count": 4
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
         "import numpy as np"
       ],
       "metadata": {
         "id": "LLiE_TYrhA1O"
       },
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -208,29 +197,59 @@
     {
       "cell_type": "code",
       "source": [
-        "import numpy as np\n",
-        "np.zeros(10)"
+        "arr=np.zeros(10)\n",
+        "print(arr)"
       ],
       "metadata": {
         "id": "NHrirmgCYXvU",
+        "outputId": "371a6035-ea9d-4edf-aeb2-d8d43762d046",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "7724784f-7cf8-4b99-af38-cfb1b6081c59"
+        }
       },
-      "execution_count": 6,
+      "execution_count": 8,
       "outputs": [
         {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "array([0., 0., 0., 0., 0., 0., 0., 0., 0., 0.])"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 6
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]\n"
+          ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "arr=np.ones(10)*5\n",
+        "print(arr)"
+      ],
+      "metadata": {
+        "id": "e4005lsTYXxx",
+        "outputId": "17c0862d-70a5-4bfa-a77b-f2c98d61790e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[5. 5. 5. 5. 5. 5. 5. 5. 5. 5.]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "GAQ97KbQvrk5"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -244,54 +263,24 @@
     {
       "cell_type": "code",
       "source": [
-        "import numpy as np\n",
-        "np.ones(10)*5"
-      ],
-      "metadata": {
-        "id": "e4005lsTYXxx",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "b78bb453-9e62-4b5f-9246-924257f8b78d"
-      },
-      "execution_count": 7,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "array([5., 5., 5., 5., 5., 5., 5., 5., 5., 5.])"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 7
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "import numpy as np\n",
-        "np.arange(20,36,2)"
+        "arr=np.arange(20,35,2)\n",
+        "print(arr)"
       ],
       "metadata": {
         "id": "oAI2tbU2Yag-",
+        "outputId": "8694b06f-9ce1-4b84-814c-723727400331",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "c3270722-bb76-45f4-baab-9530cde73cc5"
+        }
       },
-      "execution_count": 8,
+      "execution_count": 12,
       "outputs": [
         {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "array([20, 22, 24, 26, 28, 30, 32, 34])"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 8
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[20 22 24 26 28 30 32 34]\n"
+          ]
         }
       ]
     },
@@ -307,18 +296,17 @@
     {
       "cell_type": "code",
       "source": [
-        "import numpy as np\n",
-        "x =  np.arange(0,9).reshape(3,3)\n",
-        "print(x)"
+        "arr=np.arange(0,9).reshape(3,3)\n",
+        "print(arr)"
       ],
       "metadata": {
         "id": "tOlEVH7BYceE",
+        "outputId": "a9a36741-26d6-44f8-bc40-20324758ba7a",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "09e7d7bf-2611-46c8-abd4-82a919ee4911"
+        }
       },
-      "execution_count": 9,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "stream",
@@ -344,20 +332,19 @@
     {
       "cell_type": "code",
       "source": [
-        "import numpy as np\n",
-        "from numpy.matrixlib.defmatrix import concatenate\n",
-        "a=np.array([1,2,3])\n",
-        "b=np.array([4,5,6])\n",
-        "print(np.concatenate((a,b),axis=0))"
+        "a=np.array([1, 2, 3])\n",
+        "b=np.array([4, 5, 6])\n",
+        "arr=np.concatenate((a,b))\n",
+        "print(arr)"
       ],
       "metadata": {
         "id": "rAPSw97aYfE0",
+        "outputId": "955e32b5-0d5d-4ca6-aa1d-88b07d18db26",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "fcd8dc47-a68f-45e0-da11-ecf84379b55e"
+        }
       },
-      "execution_count": 10,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "stream",
@@ -394,13 +381,13 @@
       "metadata": {
         "id": "T5OxJRZ8uvR7"
       },
-      "execution_count": 22,
+      "execution_count": 18,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "df=pd.DataFrame([[\"Ravi\",24],[\"Raju\",25],[\"Rahul\",23]])\n",
+        "df=pd.DataFrame([['A',50],['B',70],['C',40]])\n",
         "df"
       ],
       "metadata": {
@@ -409,22 +396,22 @@
           "base_uri": "https://localhost:8080/",
           "height": 143
         },
-        "outputId": "f78e9bdd-d019-43a5-e57b-02120fe938b3"
+        "outputId": "2f084293-4a7b-4079-c197-0d044b0cb13a"
       },
-      "execution_count": 23,
+      "execution_count": 21,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "       0   1\n",
-              "0   Ravi  24\n",
-              "1   Raju  25\n",
-              "2  Rahul  23"
+              "   0   1\n",
+              "0  A  50\n",
+              "1  B  70\n",
+              "2  C  40"
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-0473ccdd-1f54-4f32-b276-a8a1fdc09075\">\n",
+              "  <div id=\"df-0a7c5d38-97bd-44cf-8662-8e670480b38f\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -451,23 +438,23 @@
               "  <tbody>\n",
               "    <tr>\n",
               "      <th>0</th>\n",
-              "      <td>Ravi</td>\n",
-              "      <td>24</td>\n",
+              "      <td>A</td>\n",
+              "      <td>50</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>1</th>\n",
-              "      <td>Raju</td>\n",
-              "      <td>25</td>\n",
+              "      <td>B</td>\n",
+              "      <td>70</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>2</th>\n",
-              "      <td>Rahul</td>\n",
-              "      <td>23</td>\n",
+              "      <td>C</td>\n",
+              "      <td>40</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-0473ccdd-1f54-4f32-b276-a8a1fdc09075')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-0a7c5d38-97bd-44cf-8662-8e670480b38f')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -518,12 +505,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-0473ccdd-1f54-4f32-b276-a8a1fdc09075 button.colab-df-convert');\n",
+              "          document.querySelector('#df-0a7c5d38-97bd-44cf-8662-8e670480b38f button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-0473ccdd-1f54-4f32-b276-a8a1fdc09075');\n",
+              "          const element = document.querySelector('#df-0a7c5d38-97bd-44cf-8662-8e670480b38f');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -546,7 +533,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 23
+          "execution_count": 21
         }
       ]
     },
@@ -562,15 +549,14 @@
     {
       "cell_type": "code",
       "source": [
-        "import pandas as pd \n",
-        "date = pd.date_range(start ='1-1-2023', end ='10-02-2018', freq ='24H')\n",
-        "for i in date:\n",
-        "    print(i)"
+        "d=pd.date_range(start='01-01-2023',end='10-02-2023')\n",
+        "for i in d:\n",
+        "  print(i)"
       ],
       "metadata": {
         "id": "dgyC0JhVYl4F"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -594,25 +580,23 @@
       "metadata": {
         "id": "_XMC8aEt0llB"
       },
-      "execution_count": null,
+      "execution_count": 23,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "import pandas as pd\n",
-        "lists = [[1, 'aaa', 22], [2, 'bbb', 25], [3, 'ccc', 24]]\n",
         "pd.DataFrame(lists)"
       ],
       "metadata": {
         "id": "knH76sDKYsVX",
+        "outputId": "a3d0ee3b-977f-43b7-9dd8-70ea3e2ed176",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 143
-        },
-        "outputId": "0f27c32c-6aaf-4514-a270-27fce062823a"
+        }
       },
-      "execution_count": 16,
+      "execution_count": 24,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -625,7 +609,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-8749cd19-7dcc-40c5-833a-c66e0d989d43\">\n",
+              "  <div id=\"df-97d7c9c5-b02b-4b3c-b015-9449934131c1\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -672,7 +656,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-8749cd19-7dcc-40c5-833a-c66e0d989d43')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-97d7c9c5-b02b-4b3c-b015-9449934131c1')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -723,12 +707,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-8749cd19-7dcc-40c5-833a-c66e0d989d43 button.colab-df-convert');\n",
+              "          document.querySelector('#df-97d7c9c5-b02b-4b3c-b015-9449934131c1 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-8749cd19-7dcc-40c5-833a-c66e0d989d43');\n",
+              "          const element = document.querySelector('#df-97d7c9c5-b02b-4b3c-b015-9449934131c1');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -751,7 +735,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 16
+          "execution_count": 24
         }
       ]
     }
